# memelution

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  UX_AUDIT_MEMELUTION.md  deploy.py  docker-compose.yml  package.json
.github/workflows/: ci.yml
.hallmark/: preflight.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_remove_meme_evolution.py  0003_product_upgrade.py  20260514_01_add_reactions_table.py  20260523_01_add_comment_message_reactions.py  20260601_01_add_community_is_featured.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: __init__.py  admin.py  analytics.py  auth.py  chats.py  comments.py  communities.py  notifications.py  posts.py  saved.py  search.py  system.py  users.py
backend/app/core/: auth.py  config.py
backend/app/db/: session.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py
backend/app/schemas/: __init__.py  auth.py  chat.py  comment.py  community.py  notification.py  post.py  report.py  saved.py  system.py  user.py
backend/app/services/: api_support.py  feed_service.py  media.py  realtime.py
backend/app/tests/: conftest.py  test_api.py
deploy_panel/: .gitignore  app.py  install_compose.py  requirements.txt
deploy_panel/static/: index.html
frontend/: Dockerfile  accessibility-audit-report.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
nginx/: nginx.conf
(+99 files in other folders)
